added hover effects on nav social links

--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
         <li class="nav-link"><a href="#contact">contact</a></li>
       </ul>
       <ul class="social-links">
-        <li class="social-link"><a href="github">GitHub</a></li>
-        <li class="social-link"><a href="linkedIn">LinkedIn</a></li>
-        <li class="social-link"><a href="email">Email</a></li>
+        <li class="social-link"><a title="Email" class="fa-icon fas fa-envelope" href="mailto: truby@me.com"></a></li>
+        <li class="social-link"><a title="GitHub" class="fa-icon fab fa-github" href="https://github.com/nicktruby/" target="_blank"></a></li>
+        <li class="social-link"><a title="LinkedIn" class="fa-icon fab fa-linkedin-in" href="https://www.linkedin.com/in/nicktruby/" target="_blank"></a></li>
+        <li class="social-link"><a title="DownloadCV" class="fa-icon fas fa-file-download" href="https://github.com/nicktruby/" target="_blank"></a></li>
       </ul>
+
     </div>
   </nav>
 
@@ -219,37 +221,9 @@
       <div class="wrapper">
         <div class="contact-grid">
           <a title="Email" class="fa-icon fas fa-envelope" href="mailto: truby@me.com"></a>
-          <!-- <a  class="contact-text"
-              title="Email"
-              href="mailto: truby@me.com">
-              truby@me.com
-          </a> -->
-          <a title="LinkedIn" class="fa-icon fab fa-linkedin-in" href="https://www.linkedin.com/in/nicktruby/"
-            target="_blank">
-          </a>
-          <!-- <a  title="LinkedIn"
-              class="contact-text"
-              href="https://www.linkedin.com/in/nicktruby/"
-              target="_blank">https://www.linkedin.com/in/nicktruby
-          </a> -->
-          <a title="GitHub" class="fa-icon fab fa-github" href="https://github.com/nicktruby/" target="_blank">
-
-          </a>
-          <!-- <a  title="GitHub"
-              class="contact-text"
-              href="https://github.com/nicktruby/"
-              target="_blank">
-            https://github.com/nicktruby
-          </a> -->
-          <a title="DownloadCV" class="fa-icon fas fa-file-download" href="https://github.com/nicktruby/"
-            target="_blank">
-          </a>
-          <!-- <a  title="DownloadCV"
-              class="contact-text"
-              href="https://github.com/nicktruby/"
-              target="_blank">
-              Download my CV
-          </a> -->
+          <a title="LinkedIn" class="fa-icon fab fa-linkedin-in" href="https://www.linkedin.com/in/nicktruby/" target="_blank"></a>
+          <a title="GitHub" class="fa-icon fab fa-github" href="https://github.com/nicktruby/" target="_blank"></a>
+          <a title="DownloadCV" class="fa-icon fas fa-file-download" href="https://github.com/nicktruby/" target="_blank"></a>
           <p>Email</p>
           <p>LinkedIn</p>
           <p>GitHub</p>
