about section content added

--- a/index.html
+++ b/index.html
@@ -197,20 +197,11 @@
     </section>
 
     <section class="about" id="about">
+      <h2>about</h2>
       <div class="wrapper">
-        <h2>about</h2>
-        <p>I enjoy a challange and I always approach problem solving with logic. Throughout my career I have always found this to be one of my key strengths.</p>
-        <p>I’m very competitive person, and hold myself to high standards, I always try to excel at the task at hand.
-        <p>I’m an ambitious person and I’d like to progress my career to a senior level. In both my two major employers I’ve shown strong development and progression.</p>
-        <p>My development into leadership has taught me a wide array of soft skills, and the effectiveness of a high performing team that supports and develops each other. I’m a team player that values the strengths of others and how to connect, calibrate and contribute together. Working in a democratic business, and as an elected representative I’ve also learnt the ability to use team opinion to shape and influence business decision making and unlock the empowerment of individuals.</p>
-        family
-        I am due to be married to my fiancé , Sally, in 2022. This was due to 2021 but we decided to push it back a year when Covid cast some uncertainty over our savings plan and how long the country will have restrictions imposed. But we are still very much looking forward to our special day and we both love to travel so probably the honeymoon even more! We have a son, Arthur William Truby, who is currently 18 months old. He is a large motivation in life for me, I want to have a career I can be proud of, and provide for my family. We enjoy going on days out and are national trust members, Arthur is just starting to get more confident with his walking & recently started going to Nursery too.
-        We live in Tamworth in the midlands, and we have family in Bristol, Swansea and Yeovil, so we often get together in Bristol as it is the epicentre of us all.
-        interests
-        Ever since my first mechanical experiences working at Halfords, I always enjoyed working with my hands. I still keep up bicycle mechanics as a hobby, but more commonly use my hands with any DIY project I can get stuck into. Most recently I took on the challenge of refitting our bathroom. 
-        I’ve always had an interest in tech. I bought my first Mac computer is 2005 and have been a Mac person ever since, this started my enjoyment with computer media and I did a bit of professional video editing in the past. I’ve taken apart and serviced many personal electronics in the past, and enjoy understanding how things are made.
-        I also like video gaming, I'm a console gamer and have recently made the switch to next generation with the PS5. I’m a completionism and enjoy trophy hunting on single player RPG games, and play online mostly on Call of Duty zombies and battle royale.I also enjoy TV and Cinema, I’m a bit of a Star Wars nerd, but not quite to the cos play level! 
-        </p>
+        <p>I’m a very competitive person and I hold myself to high standards. I enjoy <strong>logic</strong> and <strong>problem solving</strong>, and throughout my career I have always found this to be one of my key strengths. I’m an <strong>ambitious</strong> person and I’d like to progress my career to a senior level, within both my two major employers I’ve shown strong development and <strong>progression.</strong> I’m an experienced leader and a strong team player.</p>
+        <p>I’m due to be married to my fiancé <strong>Sally</strong> and together we have a son, <strong>Arthur.</strong> He is a large motivation in life for me, I want to have a career I can be proud of, and provide for my family. We both like to travel abroad and also explore the UK, often visiting national trust sites. We live in <strong>Tamworth, (near Birmingham)</strong> I have other family in Yeovil, Swansea and Bristol, we often gather is Bristol to see each other.</p>
+        <p>In my spare time I enjoy working with my hands, I still keep up bicycle maintenance and I do lots of <strong>DIY,</strong> I recently challenged myself to refitting the bathroom in my home. I also enjoy <strong>console gaming</strong>, mainly RPG games or online with Call of Duty Zombies / Battle Royale. I enjoy TV Shows and Cinema and anything <strong>Star Wars</strong> related. And I’ve always had an active interest in Tech including video editing and electronics repair.</p>
       </div>
     </section>
 
