changed capitalisation of headings & texttransform

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <nav class="nav">
     <a class="nav-initials" href="#">
-      <span>nt</span>
+      <span>NT</span>
     </a>
     <div class="burger">
       <span class="burger-line"></span>
@@ -29,10 +29,10 @@
     </div>
     <div class="nav-menu">
       <ul class="nav-links">
-        <li class="nav-link"><a href="#work">work</a></li>
-        <li class="nav-link"><a href="#experience">experience</a></li>
-        <li class="nav-link"><a href="#about">about</a></li>
-        <li class="nav-link"><a href="#contact">contact</a></li>
+        <li class="nav-link"><a href="#work">Work</a></li>
+        <li class="nav-link"><a href="#experience">Experience</a></li>
+        <li class="nav-link"><a href="#about">About</a></li>
+        <li class="nav-link"><a href="#contact">Contact</a></li>
       </ul>
       <ul class="social-links">
         <li class="social-link"><a title="Email" class="fa-icon fas fa-envelope" href="mailto: truby@me.com"></a></li>
@@ -47,9 +47,9 @@
   <main>
     <section class="home" id="home">
       <header class="titles">
-        <h1>hello there!</h1>
-        <h1>i am<span> nick</span></h1>
-        <h1><span>truby</span> and </h1>
+        <h1>Hello there!</h1>
+        <h1>I am<span> Nick</span></h1>
+        <h1><span>Truby</span> and </h1>
         <h1>this is my</h1>
         <h1>portfolio . . .</h1>
       </header>
@@ -66,7 +66,7 @@
       <div class="wrapper">
         <img src="./src/assets/images/headshot-full.jpg" alt="Headshot of Nick Truby">
         <div>
-          <p>...i'm a full-stack web developer, proficient at building responsive web applications,
+          <p>i'm a full-stack web developer, proficient at building responsive web applications,
             mostly experienced in <strong>JavaScript (ES6)</strong> and <strong>ReactJS</strong>,
             but motivated to develop and expand my skills within my next role,</p><br>
           <p>here is some of my recent work...</p>
@@ -75,13 +75,14 @@
     </section>
 
     <section class="work" id="work">
+      <h2>Work</h2>
       <div class="wrapper">
-        <h2>work</h2>
+        
       </div>
     </section>
 
     <section class="experience" id="experience">
-      <h2>experience</h2>
+      <h2>Experience</h2>
       <div class="wrapper">
         <p>I have recently completed a 12-week intensive software development course at
           <strong><a href="http://www.nology.io" target="_blank">_nology.</a></strong>
@@ -197,7 +198,7 @@
     </section>
 
     <section class="about" id="about">
-      <h2>about</h2>
+      <h2>About</h2>
       <div class="wrapper">
         <p>I’m a very competitive person and I hold myself to high standards. I enjoy <strong>logic</strong> and <strong>problem solving</strong>, and throughout my career I have always found this to be one of my key strengths. I’m an <strong>ambitious</strong> person and I’d like to progress my career to a senior level, within both my two major employers I’ve shown strong development and <strong>progression.</strong> I’m an experienced leader and a strong team player.</p>
         <p>I’m due to be married to my fiancé <strong>Sally</strong> and together we have a son, <strong>Arthur.</strong> He is a large motivation in life for me, I want to have a career I can be proud of, and provide for my family. We both like to travel abroad and also explore the UK, often visiting national trust sites. We live in <strong>Tamworth, (near Birmingham)</strong> I have other family in Yeovil, Swansea and Bristol, we often gather is Bristol to see each other.</p>
@@ -208,7 +209,7 @@
 
 
     <section class="contact" id="contact">
-      <h2>contact</h2>
+      <h2>Contact</h2>
       <div class="wrapper">
         <div class="contact-grid">
           <a title="Email" class="fa-icon fas fa-envelope" href="mailto: truby@me.com"></a>
