--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             <a title="Email" class="fa-icon fas fa-envelope" href="mailto: truby@me.com"></a>
             <a title="LinkedIn" class="fa-icon fab fa-linkedin-in" href="https://www.linkedin.com/in/nicktruby/" target="_blank"></a>
             <a title="GitHub" class="fa-icon fab fa-github" href="https://github.com/nicktruby/" target="_blank"></a>
-            <a title="DownloadCV" class="fa-icon fas fa-file-download" href="https://github.com/nicktruby/" target="_blank"></a>
+            <a title="DownloadCV" class="fa-icon fas fa-file-download" href="./src/assets/CV_Nick_Truby.pdf" download></a>
             <p>Email</p>
             <p>LinkedIn</p>
             <p>GitHub</p>
