--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li class="social-link"><a title="Email" class="fa-icon fas fa-envelope" href="mailto: truby@me.com"></a></li>
         <li class="social-link"><a title="GitHub" class="fa-icon fab fa-github" href="https://github.com/nicktruby/" target="_blank"></a></li>
         <li class="social-link"><a title="LinkedIn" class="fa-icon fab fa-linkedin-in" href="https://www.linkedin.com/in/nicktruby/" target="_blank"></a></li>
-        <li class="social-link"><a title="DownloadCV" class="fa-icon fas fa-file-download" href="https://github.com/nicktruby/" target="_blank"></a></li>
+        <li class="social-link"><a title="DownloadCV" class="fa-icon fas fa-file-download" href="./src/assets/CV_Nick_Truby.pdf" download></a></li>
       </ul>
 
     </div>
