--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <!-- CSS Stylesheet link -->
   <link rel="stylesheet" href="./src/assets/styles/main.css" class="css">
   <!-- Favicon links -->
-  <link rel="icon" type="image/png" href="#">
+  <link rel="apple-touch-icon" sizes="180x180" href="./src/assets/images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/images/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   <!-- Google Fonts -->
   <link
     href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
